Unit test and Android test (#8)
* workflow release

* ifood backend

* backend vercel integration

* last updates

* Unit Test and Android Test

* add unit test

* fix coverage

* kover excludes

* update workflow